--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 EZValidation - Advanced validation framework for ASP.NET MVC
+
+Find more information on the EZValidation CodePlex Page: http://ezvalidation.codeplex.com/
